--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1,11 +1,11 @@
 #+BEGIN_HTML
 ---
 layout: post
-title: Debug Python programs
+title: Write Python programs
 tagline: " by means of Emacs' toolbox"
-permalink: /tips-and-tricks/debug-python-with-emacs.html
-categories: [literate programming, Python, debugging, emacs]
-tags: [pdb, ipdb, GDB, GUD]
+permalink: /coding/codewars-toy-tasks.html
+categories: [literate programming, Python, CodeWars, emacs]
+tags: [coding, algorithms]
 ---
 #+END_HTML
 #+STARTUP: showall
@@ -15,13 +15,10 @@ tags: [pdb, ipdb, GDB, GUD]
 * #1
   #+BEGIN_QUOTE
   Return the number (count) of vowels in the given string.
-
   We will consider a, e, i, o, and u as vowels for this Kata.
   #+END_QUOTE
 
   #+BEGIN_SRC python :results output
-    import unittest
-
     def getCount(inputStr):
         num_vowels = 0
         # your code here
@@ -37,17 +34,7 @@ tags: [pdb, ipdb, GDB, GUD]
 
     print(getCount(input_string))
 
-    unittest.TestCase.assertEqual(getCount("abracadabra"), 5)
-
-    class TestNumVowels(unittest.TestCase):
-
-        def test_simple_input(self):
-            self.assertEqual(getCount("abracadabra"), 4)
-
-    print(TestNumVowels())
   #+END_SRC
-
-  #+RESULTS:
 
   #+BEGIN_SRC python
     import unittest
