Minor article's header enhancements

--- a/2016-11-13-emacs-package-downgrading.org
+++ b/2016-11-13-emacs-package-downgrading.org
@@ -4,7 +4,7 @@ layout: post
 title: How-To force Emacs to work
 tagline: " habitually"
 permalink: /how-to/downgrade-emacs-package.html
-categories: [how-to, emacs, package]
+categories: [how-to, emacs, package, time machine]
 tags: [debugging, roll-back]
 ---
 #+END_HTML
