Minor enhancements in header

--- a/2016-11-22-multithreading.org
+++ b/2016-11-22-multithreading.org
@@ -5,7 +5,7 @@ title: Write Python programs
 tagline: " by means of Emacs' toolbox"
 permalink: /python/multithreading.html
 categories: [literate programming, Python, multithreading, emacs]
-tags: [coding, algorithms]
+tags: [coding, algorithms, stdlib]
 ---
 #+END_HTML
 #+STARTUP: showall
