--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -412,6 +412,16 @@ tags: [coding, algorithms]
       letters = [chr(i) for i in range(97, 123)] * 2
       cap_letters = [chr(i) for i in range(65, 91)] * 2
 
+      def shift_symbol(symbol, shift):
+          if shift > 26:
+              shift = shift % 26
+          if symbol.isalpha():
+              if symbol.isupper():
+                  return cap_letters[cap_letters.index(symbol) + shift]
+              else:
+                  return letters[letters.index(symbol) + shift]
+          else:
+              return symbol
       assert(letters[0] == 'a')
       assert(letters[-1] == 'z')
       assert(cap_letters[0] == 'A')
