--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -432,7 +432,36 @@ tags: [coding, algorithms]
       assert(cap_letters[0] == 'A')
       assert(cap_letters[-1] == 'Z')
     #+END_SRC
+*** Tie together
+    #+BEGIN_SRC python :results output :pp :exports both
+      letters = [chr(i) for i in range(97, 123)] * 2
+      cap_letters = [chr(i) for i in range(65, 91)] * 2
 
+      def shift_symbol(symbol, shift):
+          if shift > 26:
+              shift = shift % 26
+          if symbol.isalpha():
+              if symbol.isupper():
+                  return cap_letters[cap_letters.index(symbol) + shift]
+              else:
+                  return letters[letters.index(symbol) + shift]
+          else:
+              return symbol
+
+
+      def encode_str(string, shift):
+          result = []
+          for letter in string:
+              result.append(shift_symbol(letter, shift))
+          return ''.join(result)
+
+      def decode(arr):
+          #your code
+          pass
+
+      print(encode_str('AABB', 1))
+    #+END_SRC
+    
 * TestSuite
   #+BEGIN_SRC python :results output :tangle tests/test_toy_samples.py :exports code
     import unittest
