--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -459,8 +459,11 @@ tags: [coding, algorithms]
           #your code
           pass
 
-      print(encode_str('AABB', 1))
+      assert(encode_str('AaBb #$!', 1) == 'BbCc #$!')
     #+END_SRC
+
+    #+RESULTS:
+
     
 * TestSuite
   #+BEGIN_SRC python :results output :tangle tests/test_toy_samples.py :exports code
