--- a/2016-11-30-python-oop-modeling.org
+++ b/2016-11-30-python-oop-modeling.org
@@ -36,6 +36,33 @@ tags: [coding, algorithms, oop]
 * Samples
 
 ** Grocery store
+   
+*** Persons
+    #+BEGIN_SRC python :session oop :results output
+      class Person(object):
+          def __init__(self, name):
+              self.name = name
+
+      class Customer(Person):
+          def __init__(self, name, deposit):
+              super(Customer, self).__init__(name)
+              self.deposit = deposit
+
+
+      a = Customer(name='John', deposit=123)
+      print '\n', a.deposit, a.name
+    #+END_SRC
+
+    #+RESULTS:
+    : 
+    : ... ... ... >>> ... ... ... ... >>> >>> >>> 
+    : 123 John
+
+*** Meal
+
+*** Basket
+
+*** Payments
 
 ** Pine forest
 
