--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -800,7 +800,7 @@ tags: [coding, algorithms]
               # for each symbol in the input message
               pass
           def encode(self, message):
-              result = special_zip(message, sattelite())
+              result = special_zip(message, satellite(message))
               return result
           def decode(self, message):
               return message[::-1]
