--- a/2016-09-11-pytest.org
+++ b/2016-09-11-pytest.org
@@ -2,7 +2,7 @@
 ---
 layout: post
 title: Pytest
-tagline: " module overview"
+tagline: " : helps you write better programs"
 permalink: /python/testing/pytest-in-babel.html
 categories: [python, pytest, literate programming]
 tags: [emacs, babel, tutorial, testing]
