--- a/2016-09-11-pytest.org
+++ b/2016-09-11-pytest.org
@@ -189,3 +189,34 @@ tags: [emacs, babel, tutorial, testing]
    1
 #+end_example
 
+** Test particular case
+   #+BEGIN_SRC python :results output :pp :exports both :session pytest
+     import pytest
+
+     pytest.main(['-k', 'test_answer'])
+   #+END_SRC
+
+   #+RESULTS:
+   #+begin_example
+
+   >>> ============================================================ test session starts =============================================================
+   platform linux -- Python 3.4.2, pytest-3.0.5, py-1.4.32, pluggy-0.4.0
+   rootdir: /usr/local/share/DVCS/org-pub, inifile: 
+   collecting 0 itemscollecting 3 itemscollecting 3 itemscollecting 6 itemscollecting 17 itemscollecting 22 itemscollecting 25 itemscollecting 29 itemscollecting 33 itemscollecting 38 itemscollecting 42 itemscollecting 47 itemscollecting 49 itemscollecting 51 itemscollecting 54 itemscollecting 55 itemscollecting 56 itemscollecting 58 itemscollecting 60 itemscollecting 62 itemscollecting 64 itemscollecting 67 itemscollecting 71 itemscollecting 73 itemscollecting 75 itemscollecting 78 itemscollecting 79 itemscollecting 81 itemscollecting 84 itemscollecting 86 itemscollecting 88 itemscollecting 90 itemscollecting 91 itemscollecting 95 itemscollecting 97 itemscollecting 99 itemscollecting 102 itemscollecting 104 itemscollecting 108 itemscollecting 111 itemscollecting 112 itemscollecting 117 itemscollecting 118 itemscollecting 121 itemscollecting 123 itemscollecting 124 itemscollecting 127 itemscollecting 128 itemscollecting 130 itemscollecting 133 itemscollecting 134 itemscollecting 138 itemscollecting 140 itemscollecting 142 itemscollecting 145 itemscollecting 147 itemscollecting 150 itemscollecting 153 itemscollecting 157 itemscollecting 158 itemscollecting 159 itemscollecting 163 itemscollecting 164 itemscollecting 168 itemscollecting 169 itemscollecting 171 itemscollecting 172 itemscollecting 172 itemscollecting 172 itemscollecting 172 itemscollecting 173 itemscollected 173 items 
+
+   tests/test_sample.py F
+
+   ================================================================== FAILURES ==================================================================
+   ________________________________________________________________ test_answer _________________________________________________________________
+
+       def test_answer():
+   >       assert func(3) == 5
+   E       assert 4 == 5
+   E        +  where 4 = func(3)
+
+   tests/test_sample.py:8: AssertionError
+   ============================================================ 172 tests deselected ============================================================
+   ================================================== 1 failed, 172 deselected in 0.31 seconds ==================================================
+   1
+#+end_example
+
